[package]
name = "kuber"
version = "0.1.0"
authors = ["Ian","Andor"]
edition = "2021"
description = "A Kubernetes cli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
