[package]
name = "kuber"
version = "0.1.0"
authors = ["Ian","Andor"]
edition = "2021"
description = "A Kubernetes cli"
license = "MIT"
[[bin]]
name = "kuber"
path = "src/main.rs"
[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
dialoguer = "0.10.4"
futures = "0.3.28"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.84.0", features = ["runtime", "client", "derive"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.*"
serde = { version = "1.*", features = ["derive"] }
chrono = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
